@@ -1,13 +1,12 @@
 package de.uol.swp.server.cards;
 
-import de.uol.swp.common.cards.CardDTO;
 import de.uol.swp.common.cards.CityCardDTO;
 import de.uol.swp.common.cards.EpidemicCardDTO;
+import de.uol.swp.common.cards.ICardDTO;
 import de.uol.swp.common.cards.InfectionCardDTO;
 import de.uol.swp.common.city.CityDTO;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Provides static methods to convert card objects into their respective Data Transfer Object (DTO) forms.
@@ -17,15 +16,23 @@ import java.util.stream.Collectors;
 public class CardMapper {
 
     /**
+     * Private constructor to prevent instantiation of the utility class.
+     * Throws an UnsupportedOperationException if called.
+     */
+    private CardMapper() {
+        throw new UnsupportedOperationException("Utility class");
+    }
+
+    /**
      * Converts a list of Card objects into a list of mixed CardDTOs.
      *
      * @param cards the list of Card objects to be converted
      * @return a List of CardDTO objects, each corresponding to the input list's specific card type
      */
-    public static List<CardDTO> toMixedCardDTOList(List<Card> cards) {
+    public static List<ICardDTO> toMixedCardDTOList(List<Card> cards) {
         return cards.stream()
                     .map(CardMapper::toDTO)
-                    .collect(Collectors.toList());
+                    .toList();
     }
 
     /**
@@ -35,7 +42,7 @@ public class CardMapper {
      * @param card the Card object to convert
      * @return the CardDTO corresponding to the type of the provided Card object, or null if the type is not supported
      */
-    public static CardDTO toDTO(Card card) {
+    public static ICardDTO toDTO(Card card) {
         if (card instanceof CityCard cityCard) {
             return toCityCardDTO(cityCard);
         } else if (card instanceof EpidemicCard epidemicCard) {
@@ -54,8 +61,9 @@ public class CardMapper {
      * @return a CityCardDTO object containing data from the provided CityCard and its associated City
      */
     private static CityCardDTO toCityCardDTO(CityCard cityCard) {
-        CityDTO cityDTO = new CityDTO(cityCard.getCity()
-                                              .getId(),
+        CityDTO cityDTO = new CityDTO(
+                cityCard.getCity()
+                        .getId(),
                 cityCard.getCity()
                         .getPlagueName()
                         .toString(),
@@ -79,7 +87,8 @@ public class CardMapper {
      * @return an EpidemicCardDTO containing data from the EpidemicCard
      */
     private static EpidemicCardDTO toEpidemicCardDTO(EpidemicCard epidemicCard) {
-        return new EpidemicCardDTO(epidemicCard.getId(),
+        return new EpidemicCardDTO(
+                epidemicCard.getId(),
                 epidemicCard.getTitle(),
                 epidemicCard.getType(),
                 epidemicCard.getDescription()
@@ -93,8 +102,9 @@ public class CardMapper {
      * @return an InfectionCardDTO containing data from the InfectionCard and its associated City
      */
     private static InfectionCardDTO toInfectionCardDTO(InfectionCard infectionCard) {
-        CityDTO cityDTO = new CityDTO(infectionCard.getCity()
-                                                   .getId(),
+        CityDTO cityDTO = new CityDTO(
+                infectionCard.getCity()
+                             .getId(),
                 infectionCard.getCity()
                              .getPlagueName()
                              .toString(),
@@ -120,7 +130,7 @@ public class CardMapper {
     public static List<CityCardDTO> toCityCardDTOList(List<CityCard> cityCards) {
         return cityCards.stream()
                         .map(CardMapper::toCityCardDTO)
-                        .collect(Collectors.toList());
+                        .toList();
     }
 
     /**
@@ -132,7 +142,7 @@ public class CardMapper {
     public static List<EpidemicCardDTO> toEpidemicCardDTOList(List<EpidemicCard> epidemicCards) {
         return epidemicCards.stream()
                             .map(CardMapper::toEpidemicCardDTO)
-                            .collect(Collectors.toList());
+                            .toList();
     }
 
     /**
@@ -144,7 +154,7 @@ public class CardMapper {
     public static List<InfectionCardDTO> toInfectionCardDTOList(List<InfectionCard> infectionCards) {
         return infectionCards.stream()
                              .map(CardMapper::toInfectionCardDTO)
-                             .collect(Collectors.toList());
+                             .toList();
     }
 }
 
